builds successfully. working on unit tests.

--- a/database/Makefile
+++ b/database/Makefile
@@ -15,7 +15,7 @@ ehpp = $(estdlib)/hpp
 einclude = -I$(eh) -I$(ehpp)
 
 
-bare_objects = Database.o DatabaseXML.o PugiXML.o GoogleMaps.o Location.o PhotoTypes.o TagTypes.o Polyline.o SimpleCharPool.o MemoryPool.o
+bare_objects = Database.o DatabaseXML.o PugiXML.o GoogleMaps.o Location.o PhotoTypes.o TagTypes.o Polyline.o SimpleCharPool.o MemoryPool.o MemoryPoolF.o BitField.o Random.o
 objects = $(patsubst %,$(odir)/%,$(bare_objects))
 
 
@@ -26,7 +26,7 @@ $(odir)/main : main.cpp $(objects)
 lib : $(objects)
 	ar vrs lib/libdatabase.a $(objects)
 
-$(odir)/Database.o : Database.cpp Database.h PhotoTypes.h TagTypes.h Location.h QTree.hpp HashSet.hpp MemoryPool.h SimpleCharPool.h LinkedList.hpp
+$(odir)/Database.o : Database.cpp Database.h PhotoTypes.h TagTypes.h Location.h QTree.hpp HashSet.hpp MemoryPool.h MemoryPoolF.h SimpleCharPool.h LinkedList.hpp BitField.h Random.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 $(odir)/DatabaseXML.o : DatabaseXML.cpp DatabaseXML.h Database.h
@@ -41,10 +41,10 @@ $(odir)/GoogleMaps.o : GoogleMaps.cpp GoogleMaps.h Database.h Polyline.h
 $(odir)/Location.o : Location.cpp Location.h Hypergrid.hpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
-$(odir)/PhotoTypes.o : PhotoTypes.cpp PhotoTypes.h Location.h Hypergrid.hpp TagTypes.h SimpleCharPool.h MemoryPool.h
+$(odir)/PhotoTypes.o : PhotoTypes.cpp PhotoTypes.h Location.h Hypergrid.hpp TagTypes.h SimpleCharPool.h MemoryPoolF.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
-$(odir)/TagTypes.o : TagTypes.cpp TagTypes.h LinkedList.hpp MemoryPool.h SimpleCharPool.h
+$(odir)/TagTypes.o : TagTypes.cpp TagTypes.h LinkedList.hpp MemoryPoolF.h SimpleCharPool.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 $(odir)/Polyline.o : Polyline.cpp Polyline.h Location.h
@@ -56,8 +56,17 @@ $(odir)/SimpleCharPool.o : SimpleCharPool.cpp SimpleCharPool.h
 $(odir)/MemoryPool.o : MemoryPool.cpp MemoryPool.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
+$(odir)/MemoryPoolF.o : MemoryPoolF.cpp MemoryPoolF.h BitField.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+$(odir)/BitField.o : BitField.cpp BitField.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+$(odir)/Random.o : Random.cpp Random.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
 .PHONY : clean
 clean :
-	rm $(odir)/*
-	rm $(libdir)/*
+	rm -v $(odir)/*
+	rm -v $(libdir)/*
 
