fixed errors in server

--- a/fcgi/Makefile
+++ b/fcgi/Makefile
@@ -2,25 +2,27 @@
 
 # compilation variables
 CXX = g++
-CXXFLAGS  = -Wall -o3 -std=c++11
+CXXFLAGS  = -Wall -o3
 FCGI_LIBS = -lcgicc -lfcgi++ -lfcgi
 INCLUDES  = -I/usr/include/cgicc -Iexternal -I$(databasedir)
+IMONGO = -I/usr/local/include/mongo
 LFLAGS = -lcurl `Magick++-config --ldflags --libs`
+LMONGO = -lmongoclient -lboost_system -lboost_thread -lboost_filesystem -lboost_program_options
 
 # convenience variables
 odir = bin
-databasedir = ../database
+databasedir = ../mongo
 
-bare_objects = PugiXML.o BasicHTML.o DatabaseServer.o SessionData.o 
+bare_objects = PugiXML.o BasicHTML.o DatabaseServer.o #SessionData.o 
 objects = $(patsubst %,$(odir)/%,$(bare_objects))
 
 
 # rules
 $(odir)/main : $(odir)/main.o $(objects) external/FCgiIO.o $(databasedir)/lib/libdatabase.a
-	$(CXX) $(CXXFLAGS) -o bin/main.fcgi bin/main.o $(objects) external/FCgiIO.o $(FCGI_LIBS) -ldatabase $(LFLAGS) -I$(databasedir) -L$(databasedir)/lib
+	$(CXX) $(CXXFLAGS) -o bin/main.fcgi bin/main.o $(objects) external/FCgiIO.o $(FCGI_LIBS) -ldatabase $(LFLAGS) $(LMONGO) -I$(databasedir) -L$(databasedir)/lib
 
 $(odir)/main.o : main.cpp $(databasedir)/Database.h BasicHTML.h SessionData.h
-	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES) -I/usr/include/fastcgi
+	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES) $(IMONGO) -I/usr/include/fastcgi
 
 $(odir)/PugiXML.o : pugixml.cpp pugixml.hpp pugiconfig.hpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES)
@@ -28,8 +30,8 @@ $(odir)/PugiXML.o : pugixml.cpp pugixml.hpp pugiconfig.hpp
 $(odir)/BasicHTML.o : BasicHTML.cpp BasicHTML.h SessionData.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES)
 
-$(odir)/DatabaseServer.o : DatabaseServer.cpp DatabaseServer.h $(databasedir)/Database.h $(databasedir)/DatabaseXML.h
-	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES)
+$(odir)/DatabaseServer.o : DatabaseServer.cpp DatabaseServer.h $(databasedir)/Database.h
+	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES) $(IMONGO)
 
 $(odir)/SessionData.o : SessionData.cpp SessionData.h
 	$(CXX) $(CXXFLAGS) -c -o $@ $< $(INCLUDES)
